--- a/package.json
+++ b/package.json
@@ -9,10 +9,40 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@mauron85/react-native-background-geolocation": "^0.6.3",
+    "@react-navigation/native": "^6.0.14",
+    "@react-navigation/stack": "^6.3.5",
+    "@reduxjs/toolkit": "^1.9.0",
+    "axios": "^1.2.0",
     "expo": "~47.0.8",
-    "expo-status-bar": "~1.4.2",
+    "expo-location": "^15.0.1",
+    "expo-status-bar": "^1.4.2",
+    "firebase": "^9.14.0",
+    "geolib": "^3.3.3",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-background-geofencing": "^1.5.0",
+    "react-native-boundary": "^1.1.1",
+    "react-native-dotenv": "^3.4.2",
+    "react-native-elements": "^3.4.2",
+    "react-native-fs": "^2.20.0",
+    "react-native-geo-fencing": "^0.1.0",
+    "react-native-geocoding": "^0.5.0",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-google-places-autocomplete": "^2.5.1",
+    "react-native-maps": "^1.3.2",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "react-native-timer": "^1.3.6",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.18.7",
+    "react-navigation": "^4.4.4",
+    "react-redux": "^8.0.5",
+    "rn-nodeify": "^10.3.0",
+    "tailwind-react-native-classnames": "^1.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
