--- a/package.json
+++ b/package.json
@@ -10,20 +10,24 @@
   },
   "dependencies": {
     "@mauron85/react-native-background-geolocation": "^0.6.3",
-    "@react-navigation/native": "^6.0.14",
+    "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.5",
     "@reduxjs/toolkit": "^1.9.0",
     "axios": "^1.2.0",
     "expo": "~47.0.8",
+    "expo-constants": "~14.0.2",
+    "expo-device": "~5.0.0",
     "expo-location": "^15.0.1",
+    "expo-notifications": "~0.17.0",
     "expo-status-bar": "^1.4.2",
     "firebase": "^9.14.0",
     "geolib": "^3.3.3",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-native": "0.70.5",
+    "react-native": "0.70.8",
     "react-native-background-geofencing": "^1.5.0",
     "react-native-boundary": "^1.1.1",
+    "react-native-countdown-component": "^2.7.1",
     "react-native-dotenv": "^3.4.2",
     "react-native-elements": "^3.4.2",
     "react-native-fs": "^2.20.0",
